# rust-http-server

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/http/: errors.rs  mod.rs  request.rs  response.rs  routes.rs  server.rs  writer.rs
src/http/files/: mime.rs  mod.rs  reader.rs  types.rs
src/http/request/: errors.rs  mod.rs  parser.rs  types.rs
src/http/response/: builder.rs  mod.rs  negotiation.rs  types.rs
src/http/writer/: chunked.rs  mod.rs  traits.rs  types.rs  writer.rs
