[package]
name = "Rusttp-Server"
version = "0.1.0"
authors = ["Kiefer <kiefx@pm.me>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
brotli = "8.0.2"
bytes = "1.3.0"                                  # helps manage buffers
libflate = "2.1.0"
once_cell = "1.21.3"
thiserror = "1.0.38"                             # error handling
titlecase = "=3.6.0"
